--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Slide-jQuery</title>
 </head>
 <body>
-    
+    <div class="slide">
+        <div class="boxSlide">
+            <div class="mySlide">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
