--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="slide">
         <div class="boxSlide">
-            <div class="mySlide">
-                
+            <div class="mySlide fade">
+                <div class="numbertext">1 / 3</div>
             </div>
         </div>
     </div>
