--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="boxSlide">
             <div class="mySlide fade">
                 <div class="numbertext">1 / 3</div>
+                <img src="midia/icon-bootstrap.png" >
             </div>
         </div>
     </div>
