--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
                 <div class="numbertext">1 / 3</div>
                 <img src="midia/icon-bootstrap.png" >
             </div>
+            <div class="mySlide fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="midia/icon-bootstrap.png" >
+            </div>
+            <div class="mySlide fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="midia/icon-bootstrap.png" >
+            </div>
+            <div class="mySlide fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="midia/icon-bootstrap.png" >
+            </div>
+            <div class="mySlide fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="midia/icon-bootstrap.png" >
+            </div>
+            <div class="mySlide fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="midia/icon-bootstrap.png" >
+            </div>
         </div>
     </div>
 </body>
