--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
             </div>
             <div class="mySlide fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="midia/icon-bootstrap.png" >
+                <img src="midia/icon-javascript.png" >
             </div>
             <div class="mySlide fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="midia/icon-bootstrap.png" >
+                <img src="midia/icon-jquery.png" >
             </div>
             <div class="mySlide fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="midia/icon-bootstrap.png" >
+                <img src="midia/icon-nodejs.png" >
             </div>
             <div class="mySlide fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="midia/icon-bootstrap.png" >
+                <img src="midia/icon-php.png" >
             </div>
             <div class="mySlide fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="midia/icon-bootstrap.png" >
+                <img src="midia/icon-react.png" >
             </div>
         </div>
     </div>
