--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="numbertext">1 / 3</div>
                 <img src="midia/icon-react.png" >
             </div>
-        </div>
+        </div><!--boxSlide-->
     </div>
 </body>
 </html>
