--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <img src="midia/icon-react.png" >
             </div>
         </div><!--boxSlide-->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a><!--prev-->
+        <a class="next" onclick="plusSlides(1)">&#10095;</a><!--next-->
+        <br>
     </div>
 </body>
 </html>
