--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a><!--prev-->
         <a class="next" onclick="plusSlides(1)">&#10095;</a><!--next-->
         <br>
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+    </div><!--style-->
     </div>
 </body>
 </html>
